welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:4: error: not found: value i
  for (i <- i to nbPas)
            ^