welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas:Int, versLAvant:Boolean)
{
  for (i <- i to nbPas)
  {
    if (versLAvant)
      avance()
    else
      recule()
  }
}